--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
         <body>
             <div id="push-notification-panel" style="background: paleturquoise;" class="container-fluid">
                 <div id="push-notification-not-possible">
-                    The push notification subscription interface would normally be displayed here, but is disabled because either:
+                    The push notification subscription interface would normally be displayed here,
+                    but is disabled because either:
                     <ol>
                         <li>you are not logged in to your Signal K server; or</li>
                         <li>the device you are using cannot support push notifications.</li>
